app/src/main/java/com/example/androidmvvm/core/error/DefaultFailure.kt
package com.example.androidmvvm.core.error

data class DefaultFailure(
    val exception: Exception,
) : Failure